Fixed Java 8 compatibility. Fixed reading movie list.